style.css
body, html {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
}
#video {
    position: relative;
    width: 100%;
    height: 100vh;
    overflow: hidden;
}
#video video {
    position: absolute;
    top: 50%;
    left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    z-index: -1;
    transform: translate(-50%, -50%);
}
.buy-btn{
   border-radius: 10%;
   margin-left: 20px;
   margin-right: 20px;
}
.navbar-text{
    font-size: 1.2rem !important;
    color: white !important;
    padding-left: 20px;
}
.game-information{
    margin-top: 200px;
}
#available-now{
    color: #BE1829 !important;
    font-size: 2rem;
}
#logo{
    max-width: 100%;
    height: 100%;
}
.platforms{
    width: 120px;
    height: 60px;
}
@media (min-width: 992px){
    .platforms-available{
        margin-left: 0.5em;
    }
    #available-now{
        margin-left: 0.5em;  
    }
}
@media (max-width: 576px){
    #available-now{
        font-size: 1.5rem;
    }
}
@media (min-width: 768px) and (max-width: 991.5px){
    .platforms-available{
        margin-left: 8%;
    }
}
@media (min-width: 576px) and (max-width: 767.5px){
    .platforms{
        width: 100px;
        height: 50px;
    }
    .platforms-available{
        margin-left: 2%;
    }
}
@media (max-width: 576px){
    .platforms{
        width: 100px;
        height: 50px;
    }
    .platforms-available{
        margin-left: 38%;
    }
}

